--- a/Oracl_JDK1.8/Dockerfile
+++ b/Oracl_JDK1.8/Dockerfile
@@ -8,12 +8,14 @@ MAINTAINER Ilyes BEN BRIK <ilyes.brik@gmail.com>
 
       RUN apk update  && apk add curl && apk add --no-cache --virtual=build-dependencies 
 
+  #2_ Install GLIBC
+
       RUN cd /tmp \
           && wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub \
           && wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.28-r0/glibc-2.28-r0.apk \
           && apk add --no-cache glibc-2.28-r0.apk
 
-  #2_ Activate Bash
+  #3_ Activate Bash
     #a) Install bash
          RUN apk add bash
          RUN apk add bash-completion
