Update Scrapy image

--- a/Scrapy/Dockerfile
+++ b/Scrapy/Dockerfile
@@ -16,5 +16,5 @@ MAINTAINER Ilyes BEN BRIK <ilyes.brik@gmail.com>
 
 # Make the container running
 
-    WORKDIR /root
+    WORKDIR /workspace
     CMD ["/bin/bash"]
